# shaders

./: Cargo.toml
assets/shaders/: cellular_automata.wgsl  game_of_life.wgsl  shader.wgsl
cellular_automata/: Cargo.toml
cellular_automata/src/: bind_group.rs  data_structs.rs  lib.rs  pipeline.rs  render_graph.rs
game_of_life/: Cargo.toml
game_of_life/src/: bind_group.rs  data_structs.rs  lib.rs  pipeline.rs  render_graph.rs
src/: custom_plugin.rs  main.rs
