[package]
name = "shaders"
version = "0.1.0"
edition = "2024"


[workspace]
members = [
  "cellular_automata", 
  "game_of_life"
]

[workspace.dependencies]
bevy = "0.16.0"
bytemuck = "1.23.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { workspace = true }
cellular_automata = { path = "cellular_automata" }
game_of_life = { path = "game_of_life" }